Development Portal (2017-09-04 shi)
==============================
Fixed typo in view_countries.js
Fixed link colour for search
Fixed percentage views in *_activities.html
Updated chunks with generalised name
Updated translations


Development Portal (2017-09-03 shi)
==============================
Added donor and sector types to views
Removed hover titles from lists
Flex document linksin SAVi
Move EXPLORE to main landing page
Update links, layout and styles


Development Portal (2017-09-02 shi)
==============================
Added select aria-labels and img alt text
Minor css fixes overall site and footer links
Updated text on portal landing pages
Updated figure views - remove display:none; when refactored
Fix corresponding pages affected
Added translations for updated views
Updated footer links
Fixed scrollTop link


Development Portal (2017-09-01 shi)
==============================
Updated footer with D-Portal-Logs link
Added https info and link to Generator page
Updated translations for new footer link
Fix settings link
Updated search_view_text in translations
Added 'press enter' search input box when typing
Remove auto-suggestion in search input box
Added text to replace "..." in search


Development Portal (2017-08-31 shi)
==============================
Updated search2 intro and information text
Added FAQ link to landing page
Removed freetext search link


Development Portal (2017-08-30 shi)
==============================
Fix search2 multiple choice stylings
Update abc toggle
Update overall search2 layout
Update Print-friendly css
Added pubpost/prelink to savi.js for publisher ref links
Moved url in footer of general.html to #footer6 including translations


Development Portal (2017-08-18 shi)
==============================
Fix search2 dropdown margin


Development Portal (2017-08-16 shi)
==============================
Updated locations element in SAVi


Development Portal (2017-08-03 shi)
==============================
Updated 'Inspire' template