@@ -98,7 +98,7 @@ view_list_publishers.ajax=function(args)
 			ctrack.chunk("numof_publishers" , data.rows.length );
 
 			var cc=[];
-			cc[0]=["reporting_ref","reporting","count","link"];
+			cc[0]=["reporting_ref","reporting-org","count","link"];
 			a.forEach(function(v){
 				cc[cc.length]=[v.reporting_ref,v.reporting,v.count_num,"http://d-portal.org/ctrack.html?publisher="+v.reporting_ref];
 			});
