@@ -5,6 +5,8 @@ Fixed link colour for search
 Fixed percentage views in *_activities.html
 Updated chunks with generalised name
 Updated translations
+Updated csv download headers in view_list_*.js
+Added activity-status-code query to csv downloads
 
 
 Development Portal (2017-09-03 shi)
